nlpql/nlpql_parserParser.py
# Generated from nlpql_parser.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class nlpql_parserParser ( Parser ):

    grammarFileName = "nlpql_parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'default'", "'final'", "'phenotype'", 
                     "'version'", "'description'", "'datamodel'", "'include'", 
                     "'called'", "'codesystem'", "'valueset'", "'termset'", 
                     "'documentset'", "'cohort'", "'population'", "'define'", 
                     "'context'", "'OMOP'", "'ClarityCore'", "'OHDSIHelpers'", 
                     "'All'", "'Patient'", "'Document'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'>'", "'<'", "'<='", "'>='", 
                     "'=='", "<INVALID>", "<INVALID>", "<INVALID>", "'!='", 
                     "'!'", "'+'", "'-'", "'*'", "'/'", "'^'", "'%'", "';'", 
                     "':'", "'.'", "','", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'" ]

    symbolicNames = [ "<INVALID>", "DEFAULT", "FINAL", "PHENOTYPE_NAME", 
                      "VERSION", "DESCRIPTION", "DATAMODEL", "INCLUDE", 
                      "CALLED", "CODE_SYSTEM", "VALUE_SET", "TERM_SET", 
                      "DOCUMENT_SET", "COHORT", "POPULATION", "DEFINE", 
                      "CONTEXT", "OMOP", "CLARITY_CORE", "OHDSI_HELPERS", 
                      "ALL", "PATIENT", "DOCUMENT", "WHERE", "AND", "OR", 
                      "NOT", "GT", "LT", "LTE", "GTE", "EQUAL", "IS", "LIKE", 
                      "BETWEEN", "NOT_EQUAL", "BANG", "PLUS", "MINUS", "MULT", 
                      "DIV", "CARET", "MOD", "SEMI", "COLON", "DOT", "COMMA", 
                      "L_PAREN", "R_PAREN", "L_BRACKET", "R_BRACKET", "L_CURLY", 
                      "R_CURLY", "DECIMAL", "HEX", "OCT", "BINARY", "FLOAT", 
                      "HEX_FLOAT", "BOOL", "NULL", "IN", "CHAR", "STRING", 
                      "WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER", "TIME" ]

    RULE_validExpression = 0
    RULE_statement = 1
    RULE_version = 2
    RULE_versionValue = 3
    RULE_phenotypeName = 4
    RULE_description = 5
    RULE_dataModel = 6
    RULE_include = 7
    RULE_codeSystem = 8
    RULE_valueSet = 9
    RULE_documentSet = 10
    RULE_termSet = 11
    RULE_cohort = 12
    RULE_population = 13
    RULE_context = 14
    RULE_define = 15
    RULE_defineSubject = 16
    RULE_finalModifier = 17
    RULE_defineName = 18
    RULE_dataEntity = 19
    RULE_operation = 20
    RULE_expression = 21
    RULE_predicate = 22
    RULE_nullNotnull = 23
    RULE_expressionAtom = 24
    RULE_unaryOperator = 25
    RULE_logicalOperator = 26
    RULE_comparisonOperator = 27
    RULE_operand = 28
    RULE_methodCall = 29
    RULE_qualifiedName = 30
    RULE_pairMethod = 31
    RULE_pairArray = 32
    RULE_modifiers = 33
    RULE_obj = 34
    RULE_pair = 35
    RULE_identifierPair = 36
    RULE_named = 37
    RULE_array = 38
    RULE_value = 39

    ruleNames =  [ "validExpression", "statement", "version", "versionValue", 
                   "phenotypeName", "description", "dataModel", "include", 
                   "codeSystem", "valueSet", "documentSet", "termSet", "cohort", 
                   "population", "context", "define", "defineSubject", "finalModifier", 
                   "defineName", "dataEntity", "operation", "expression", 
                   "predicate", "nullNotnull", "expressionAtom", "unaryOperator", 
                   "logicalOperator", "comparisonOperator", "operand", "methodCall", 
                   "qualifiedName", "pairMethod", "pairArray", "modifiers", 
                   "obj", "pair", "identifierPair", "named", "array", "value" ]

    EOF = Token.EOF
    DEFAULT=1
    FINAL=2
    PHENOTYPE_NAME=3
    VERSION=4
    DESCRIPTION=5
    DATAMODEL=6
    INCLUDE=7
    CALLED=8
    CODE_SYSTEM=9
    VALUE_SET=10
    TERM_SET=11
    DOCUMENT_SET=12
    COHORT=13
    POPULATION=14
    DEFINE=15
    CONTEXT=16
    OMOP=17
    CLARITY_CORE=18
    OHDSI_HELPERS=19
    ALL=20
    PATIENT=21
    DOCUMENT=22
    WHERE=23
    AND=24
    OR=25
    NOT=26
    GT=27
    LT=28
    LTE=29
    GTE=30
    EQUAL=31
    IS=32
    LIKE=33
    BETWEEN=34
    NOT_EQUAL=35
    BANG=36
    PLUS=37
    MINUS=38
    MULT=39
    DIV=40
    CARET=41
    MOD=42
    SEMI=43
    COLON=44
    DOT=45
    COMMA=46
    L_PAREN=47
    R_PAREN=48
    L_BRACKET=49
    R_BRACKET=50
    L_CURLY=51
    R_CURLY=52
    DECIMAL=53
    HEX=54
    OCT=55
    BINARY=56
    FLOAT=57
    HEX_FLOAT=58
    BOOL=59
    NULL=60
    IN=61
    CHAR=62
    STRING=63
    WS=64
    COMMENT=65
    LINE_COMMENT=66
    IDENTIFIER=67
    TIME=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ValidExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(nlpql_parserParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nlpql_parserParser.StatementContext)
            else:
                return self.getTypedRuleContext(nlpql_parserParser.StatementContext,i)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_validExpression




    def validExpression(self):

        localctx = nlpql_parserParser.ValidExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_validExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << nlpql_parserParser.DEFAULT) | (1 << nlpql_parserParser.PHENOTYPE_NAME) | (1 << nlpql_parserParser.DESCRIPTION) | (1 << nlpql_parserParser.DATAMODEL) | (1 << nlpql_parserParser.INCLUDE) | (1 << nlpql_parserParser.CODE_SYSTEM) | (1 << nlpql_parserParser.VALUE_SET) | (1 << nlpql_parserParser.TERM_SET) | (1 << nlpql_parserParser.DOCUMENT_SET) | (1 << nlpql_parserParser.COHORT) | (1 << nlpql_parserParser.POPULATION) | (1 << nlpql_parserParser.DEFINE) | (1 << nlpql_parserParser.CONTEXT))) != 0):
                self.state = 80
                self.statement()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(nlpql_parserParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(nlpql_parserParser.SEMI, 0)

        def phenotypeName(self):
            return self.getTypedRuleContext(nlpql_parserParser.PhenotypeNameContext,0)


        def description(self):
            return self.getTypedRuleContext(nlpql_parserParser.DescriptionContext,0)


        def dataModel(self):
            return self.getTypedRuleContext(nlpql_parserParser.DataModelContext,0)


        def include(self):
            return self.getTypedRuleContext(nlpql_parserParser.IncludeContext,0)


        def codeSystem(self):
            return self.getTypedRuleContext(nlpql_parserParser.CodeSystemContext,0)


        def valueSet(self):
            return self.getTypedRuleContext(nlpql_parserParser.ValueSetContext,0)


        def termSet(self):
            return self.getTypedRuleContext(nlpql_parserParser.TermSetContext,0)


        def documentSet(self):
            return self.getTypedRuleContext(nlpql_parserParser.DocumentSetContext,0)


        def cohort(self):
            return self.getTypedRuleContext(nlpql_parserParser.CohortContext,0)


        def population(self):
            return self.getTypedRuleContext(nlpql_parserParser.PopulationContext,0)


        def define(self):
            return self.getTypedRuleContext(nlpql_parserParser.DefineContext,0)


        def context(self):
            return self.getTypedRuleContext(nlpql_parserParser.ContextContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_statement




    def statement(self):

        localctx = nlpql_parserParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [nlpql_parserParser.PHENOTYPE_NAME]:
                self.state = 88
                self.phenotypeName()
                pass
            elif token in [nlpql_parserParser.DESCRIPTION]:
                self.state = 89
                self.description()
                pass
            elif token in [nlpql_parserParser.DATAMODEL]:
                self.state = 90
                self.dataModel()
                pass
            elif token in [nlpql_parserParser.INCLUDE]:
                self.state = 91
                self.include()
                pass
            elif token in [nlpql_parserParser.CODE_SYSTEM]:
                self.state = 92
                self.codeSystem()
                pass
            elif token in [nlpql_parserParser.VALUE_SET]:
                self.state = 93
                self.valueSet()
                pass
            elif token in [nlpql_parserParser.TERM_SET]:
                self.state = 94
                self.termSet()
                pass
            elif token in [nlpql_parserParser.DOCUMENT_SET]:
                self.state = 95
                self.documentSet()
                pass
            elif token in [nlpql_parserParser.COHORT]:
                self.state = 96
                self.cohort()
                pass
            elif token in [nlpql_parserParser.DEFAULT, nlpql_parserParser.POPULATION]:
                self.state = 97
                self.population()
                pass
            elif token in [nlpql_parserParser.DEFINE]:
                self.state = 98
                self.define()
                pass
            elif token in [nlpql_parserParser.CONTEXT]:
                self.state = 99
                self.context()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 102
            self.match(nlpql_parserParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VersionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERSION(self):
            return self.getToken(nlpql_parserParser.VERSION, 0)

        def versionValue(self):
            return self.getTypedRuleContext(nlpql_parserParser.VersionValueContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_version




    def version(self):

        localctx = nlpql_parserParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(nlpql_parserParser.VERSION)
            self.state = 105
            self.versionValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VersionValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(nlpql_parserParser.STRING, 0)

        def getRuleIndex(self):
            return nlpql_parserParser.RULE_versionValue




    def versionValue(self):

        localctx = nlpql_parserParser.VersionValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_versionValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(nlpql_parserParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PhenotypeNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PHENOTYPE_NAME(self):
            return self.getToken(nlpql_parserParser.PHENOTYPE_NAME, 0)

        def STRING(self):
            return self.getToken(nlpql_parserParser.STRING, 0)

        def version(self):
            return self.getTypedRuleContext(nlpql_parserParser.VersionContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_phenotypeName




    def phenotypeName(self):

        localctx = nlpql_parserParser.PhenotypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_phenotypeName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(nlpql_parserParser.PHENOTYPE_NAME)
            self.state = 110
            self.match(nlpql_parserParser.STRING)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==nlpql_parserParser.VERSION:
                self.state = 111
                self.version()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DescriptionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESCRIPTION(self):
            return self.getToken(nlpql_parserParser.DESCRIPTION, 0)

        def STRING(self):
            return self.getToken(nlpql_parserParser.STRING, 0)

        def getRuleIndex(self):
            return nlpql_parserParser.RULE_description




    def description(self):

        localctx = nlpql_parserParser.DescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_description)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(nlpql_parserParser.DESCRIPTION)
            self.state = 115
            self.match(nlpql_parserParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DataModelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATAMODEL(self):
            return self.getToken(nlpql_parserParser.DATAMODEL, 0)

        def OMOP(self):
            return self.getToken(nlpql_parserParser.OMOP, 0)

        def STRING(self):
            return self.getToken(nlpql_parserParser.STRING, 0)

        def version(self):
            return self.getTypedRuleContext(nlpql_parserParser.VersionContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_dataModel




    def dataModel(self):

        localctx = nlpql_parserParser.DataModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dataModel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(nlpql_parserParser.DATAMODEL)
            self.state = 118
            _la = self._input.LA(1)
            if not(_la==nlpql_parserParser.OMOP or _la==nlpql_parserParser.STRING):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==nlpql_parserParser.VERSION:
                self.state = 119
                self.version()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IncludeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE(self):
            return self.getToken(nlpql_parserParser.INCLUDE, 0)

        def CALLED(self):
            return self.getToken(nlpql_parserParser.CALLED, 0)

        def IDENTIFIER(self):
            return self.getToken(nlpql_parserParser.IDENTIFIER, 0)

        def CLARITY_CORE(self):
            return self.getToken(nlpql_parserParser.CLARITY_CORE, 0)

        def OHDSI_HELPERS(self):
            return self.getToken(nlpql_parserParser.OHDSI_HELPERS, 0)

        def STRING(self):
            return self.getToken(nlpql_parserParser.STRING, 0)

        def version(self):
            return self.getTypedRuleContext(nlpql_parserParser.VersionContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_include




    def include(self):

        localctx = nlpql_parserParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_include)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(nlpql_parserParser.INCLUDE)
            self.state = 123
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << nlpql_parserParser.CLARITY_CORE) | (1 << nlpql_parserParser.OHDSI_HELPERS) | (1 << nlpql_parserParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==nlpql_parserParser.VERSION:
                self.state = 124
                self.version()


            self.state = 127
            self.match(nlpql_parserParser.CALLED)
            self.state = 128
            self.match(nlpql_parserParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CodeSystemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CODE_SYSTEM(self):
            return self.getToken(nlpql_parserParser.CODE_SYSTEM, 0)

        def identifierPair(self):
            return self.getTypedRuleContext(nlpql_parserParser.IdentifierPairContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_codeSystem




    def codeSystem(self):

        localctx = nlpql_parserParser.CodeSystemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_codeSystem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(nlpql_parserParser.CODE_SYSTEM)
            self.state = 131
            self.identifierPair()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueSetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VALUE_SET(self):
            return self.getToken(nlpql_parserParser.VALUE_SET, 0)

        def pairMethod(self):
            return self.getTypedRuleContext(nlpql_parserParser.PairMethodContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_valueSet




    def valueSet(self):

        localctx = nlpql_parserParser.ValueSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_valueSet)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(nlpql_parserParser.VALUE_SET)
            self.state = 134
            self.pairMethod()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DocumentSetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOCUMENT_SET(self):
            return self.getToken(nlpql_parserParser.DOCUMENT_SET, 0)

        def pairMethod(self):
            return self.getTypedRuleContext(nlpql_parserParser.PairMethodContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_documentSet




    def documentSet(self):

        localctx = nlpql_parserParser.DocumentSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_documentSet)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(nlpql_parserParser.DOCUMENT_SET)
            self.state = 137
            self.pairMethod()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermSetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERM_SET(self):
            return self.getToken(nlpql_parserParser.TERM_SET, 0)

        def pairArray(self):
            return self.getTypedRuleContext(nlpql_parserParser.PairArrayContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_termSet




    def termSet(self):

        localctx = nlpql_parserParser.TermSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_termSet)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(nlpql_parserParser.TERM_SET)
            self.state = 140
            self.pairArray()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CohortContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COHORT(self):
            return self.getToken(nlpql_parserParser.COHORT, 0)

        def pairMethod(self):
            return self.getTypedRuleContext(nlpql_parserParser.PairMethodContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_cohort




    def cohort(self):

        localctx = nlpql_parserParser.CohortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_cohort)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(nlpql_parserParser.COHORT)
            self.state = 143
            self.pairMethod()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PopulationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POPULATION(self):
            return self.getToken(nlpql_parserParser.POPULATION, 0)

        def IDENTIFIER(self):
            return self.getToken(nlpql_parserParser.IDENTIFIER, 0)

        def DEFAULT(self):
            return self.getToken(nlpql_parserParser.DEFAULT, 0)

        def getRuleIndex(self):
            return nlpql_parserParser.RULE_population




    def population(self):

        localctx = nlpql_parserParser.PopulationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_population)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==nlpql_parserParser.DEFAULT:
                self.state = 145
                self.match(nlpql_parserParser.DEFAULT)


            self.state = 148
            self.match(nlpql_parserParser.POPULATION)
            self.state = 149
            self.match(nlpql_parserParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ContextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTEXT(self):
            return self.getToken(nlpql_parserParser.CONTEXT, 0)

        def PATIENT(self):
            return self.getToken(nlpql_parserParser.PATIENT, 0)

        def DOCUMENT(self):
            return self.getToken(nlpql_parserParser.DOCUMENT, 0)

        def getRuleIndex(self):
            return nlpql_parserParser.RULE_context




    def context(self):

        localctx = nlpql_parserParser.ContextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_context)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(nlpql_parserParser.CONTEXT)
            self.state = 152
            _la = self._input.LA(1)
            if not(_la==nlpql_parserParser.PATIENT or _la==nlpql_parserParser.DOCUMENT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE(self):
            return self.getToken(nlpql_parserParser.DEFINE, 0)

        def defineName(self):
            return self.getTypedRuleContext(nlpql_parserParser.DefineNameContext,0)


        def COLON(self):
            return self.getToken(nlpql_parserParser.COLON, 0)

        def defineSubject(self):
            return self.getTypedRuleContext(nlpql_parserParser.DefineSubjectContext,0)


        def finalModifier(self):
            return self.getTypedRuleContext(nlpql_parserParser.FinalModifierContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_define




    def define(self):

        localctx = nlpql_parserParser.DefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_define)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(nlpql_parserParser.DEFINE)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==nlpql_parserParser.FINAL:
                self.state = 155
                self.finalModifier()


            self.state = 158
            self.defineName()
            self.state = 159
            self.match(nlpql_parserParser.COLON)
            self.state = 160
            self.defineSubject()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefineSubjectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operation(self):
            return self.getTypedRuleContext(nlpql_parserParser.OperationContext,0)


        def dataEntity(self):
            return self.getTypedRuleContext(nlpql_parserParser.DataEntityContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_defineSubject




    def defineSubject(self):

        localctx = nlpql_parserParser.DefineSubjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_defineSubject)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.operation()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.dataEntity()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FinalModifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINAL(self):
            return self.getToken(nlpql_parserParser.FINAL, 0)

        def getRuleIndex(self):
            return nlpql_parserParser.RULE_finalModifier




    def finalModifier(self):

        localctx = nlpql_parserParser.FinalModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_finalModifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(nlpql_parserParser.FINAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefineNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(nlpql_parserParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return nlpql_parserParser.RULE_defineName




    def defineName(self):
